<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sambesnier.studentlink.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@android:color/white"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="Question..."
                android:textSize="22dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                    android:id="@+id/btnYes"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/btn_icon_vote"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/iconBtnYes"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:text="@string/icon_smile"
                        android:textColor="@color/colorPrimary"
                        android:textSize="60dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Oui"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnNo"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/btn_icon_vote"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/iconBtnNo"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:text="@string/icon_sad"
                        android:textColor="@color/colorNo"
                        android:textSize="60dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Non"
                        android:gravity="center"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnBlur"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/btn_icon_vote"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/iconBtnBlur"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:text="@string/icon_question"
                        android:textColor="@color/colorBlur"
                        android:textSize="60dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="C'est flou"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
